err/atreal.richfile.preview.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/Extensions'...
Compiling './lib/python3.5/site-packages/Products/AROfficeTransforms/__init__.py'...
***   File "./lib/python3.5/site-packages/Products/AROfficeTransforms/__init__.py", line 6
    def initialize(context):
                           ^
SyntaxError: import * only allowed at module level

Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/profiles'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/profiles/default'...
Compiling './lib/python3.5/site-packages/Products/AROfficeTransforms/setuphandlers.py'...
***   File "./lib/python3.5/site-packages/Products/AROfficeTransforms/setuphandlers.py", line 26
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/tests'...
Compiling './lib/python3.5/site-packages/Products/AROfficeTransforms/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/AROfficeTransforms/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/tests/input'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/tests/output'...
Compiling './lib/python3.5/site-packages/Products/AROfficeTransforms/tests/test_transforms.py'...
***   File "./lib/python3.5/site-packages/Products/AROfficeTransforms/tests/test_transforms.py", line 56
    print self.normalize
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/AROfficeTransforms/tests/word.py'...
***   File "./lib/python3.5/site-packages/Products/AROfficeTransforms/tests/word.py", line 25
    print data.getData()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument/doc'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument/interfaces'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument/interfaces/php5'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument/interfaces/python'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument/test'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument/xsl'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument/xsl/aukyla'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/libopendocument/xsl/default'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/sx2ml'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/xlhtml'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/xlhtml/cole'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/xlhtml/cole/doc'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/xlhtml/cole/examples'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/xlhtml/cole/utils'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/xlhtml/ppthtml'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/xlhtml/xlhtml'...
Listing './lib/python3.5/site-packages/Products/AROfficeTransforms/transforms/transform_libs/xlhtml/xlhtml/contrib'...
Listing './lib/python3.5/site-packages/Products.AROfficeTransforms-0.11.0.egg-info'...
Listing './lib/python3.5/site-packages/atreal'...
Listing './lib/python3.5/site-packages/atreal/filestorage'...
Listing './lib/python3.5/site-packages/atreal/filestorage/common'...
Listing './lib/python3.5/site-packages/atreal/richfile'...
Listing './lib/python3.5/site-packages/atreal/richfile/preview'...
Listing './lib/python3.5/site-packages/atreal/richfile/preview/browser'...
Compiling './lib/python3.5/site-packages/atreal/richfile/preview/events.py'...
***   File "./lib/python3.5/site-packages/atreal/richfile/preview/events.py", line 18
    print "atreal.richfile.preview: build and store preview for %s" % ('/'.join(obj.getPhysicalPath()),)
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atreal/richfile/preview/locales'...
Listing './lib/python3.5/site-packages/atreal/richfile/preview/locales/fr'...
Listing './lib/python3.5/site-packages/atreal/richfile/preview/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/richfile/preview/profiles'...
Listing './lib/python3.5/site-packages/atreal/richfile/preview/profiles/default'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/browser'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/browser/images'...
Compiling './lib/python3.5/site-packages/atreal/richfile/qualifier/common.py'...
***   File "./lib/python3.5/site-packages/atreal/richfile/qualifier/common.py", line 217
    print "viewlet : %s \n kss_id : %s" % (viewlet, self.kss_id)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atreal/richfile/qualifier/events.py'...
***   File "./lib/python3.5/site-packages/atreal/richfile/qualifier/events.py", line 31
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/locales'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/locales/fr'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/profiles'...
Listing './lib/python3.5/site-packages/atreal/richfile/qualifier/profiles/default'...
Listing './lib/python3.5/site-packages/atreal.filestorage.common-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/atreal.richfile.preview-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/atreal.richfile.qualifier-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher/tests'...
Listing './lib/python3.5/site-packages/collective.monkeypatcher-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
